[package]
name = "aaska"
version = "0.1.0"
edition = "2021"

[dependencies]
argus = { path = "/home/drusk/code/arcana/argus" }
aaska = { path = "lib", package = "aaska-lib" }

clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6" }
tracing = { version = "0.1" }
maud = { version = "0.27" }

[profile.dev]
debug = 0
